Unreleased

Added
    Bulk action to stop containers (#184)

Changed
    Renamespaced & updated class names for lots of "Containers" to "Instances"
    to be consistent with the way we use LXD API, this will break any scripts

0.7.0 - 12/04/2020

Added
    Access control - This will break any existing scripts that you may have,
        it uses sessions for everything which isn't good API design (stateful)
        so ill have to switch to using the tokens to authenticate the API

        This includes the basic functionality to login, add users & reset passwords
        it doesn't add any kind of per user restrictions!

        Thanks to Shem Pasamba (@shemgp) for implementing the user token
        functionality for the node server and that will be used for api requests
        in the future.

    Logo created by my buddy Josh
    Total storage available to fleet analytics
    View, create & delete proxy devices on a host (#165)
    Instance network's bytes sent / recieved to server overview (#169)
    Jump between instances, snapshots, images, & profiles from used by tables

Changed
    Indicate cluster groups & standalone hosts on dashboard (#150)
    Load profile on click instead of passing around an array containing profile data
    Indicate cluster groups & standalone hosts on profiles
    Indicate cluster groups & standalone hosts on storage
    Indicate cluster groups & standalone hosts on networks
    Indicate cluster groups & standalone hosts on projects
    Clear modals on hidden (#164)
    Quite a lot of the UI was updated (to what I think is better)

Fixed
    Cant create a container with no devices (#158)
    All clusters not showing on cluster overview (#151)
    Cant store backup locally because of missing class property (#164)
    Cant access files on new versions of LXD

0.6.1 - 02/03/2020

Fixed
    Cant add more than one GPU
    CoreUI bug preventing collapse's from working

0.6.0 - 01/02/2020

Added