@@ -2,6 +2,7 @@ Unreleased
 
 Added
     Bulk action to stop containers (#184)
+    Bulk action to start containers (#185)
 
 Changed
     Renamespaced & updated class names for lots of "Containers" to "Instances"
